# five-mcp

./: .gitignore  LICENSE  README.md  glama.json  pyproject.toml  server.json
.github/workflows/: publish-mcp.yml  publish.yml  test.yml
src/five_mcp/: __init__.py  server.py
tests/: test_server.py
