[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "five-mcp"
version = "0.1.1"
description = "MCP server for the FIVE Character Engine — consistent LLM character voices via JSON constraints"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "kiro0x", email = "hello@fiveengine.dev" },
]
keywords = ["mcp", "llm", "character", "consistency", "five", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://fiveengine.dev"
Repository = "https://github.com/kiro0x/five-mcp"
Issues = "https://github.com/kiro0x/five-mcp/issues"
Documentation = "https://fiveengine.dev"

[project.scripts]
five-mcp = "five_mcp.server:main"
