[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "five-mcp"
version = "1.0.1"
description = "160,000 deductively-derived JSON constraints that eliminate LLM persona drift. Measured: 0 breaks in a 120-turn pressure test."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "kiro0x", email = "hello@fiveengine.dev" },
]
keywords = ["mcp", "llm", "persona", "consistency", "five", "ai", "token-cost-optimization", "inference-cost-reduction", "persona-drift", "retry-elimination"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://fiveengine.dev"
Repository = "https://github.com/kiro0x/five-mcp"
Issues = "https://github.com/kiro0x/five-mcp/issues"
Documentation = "https://fiveengine.dev"

[project.scripts]
five-mcp = "five_mcp.server:main"
